# Windows-Registry-Change-Monitoring-System

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  config.sample.json  pyproject.toml  render.yaml  requirements-streamlit.txt  requirements.txt  run_monitor.bat
.github/workflows/: python-app.yml
app/: __init__.py  main.py
app/config/: __init__.py  registry_paths.py  settings.py
app/detection/: __init__.py
app/monitoring/: __init__.py  autorun_monitor.py  integrity_checker.py  monitor.py
app/reports/: __init__.py  report.txt  report_generator.py
app/utils/: __init__.py  helpers.py  logger.py
app/web/: __init__.py  app.py  routes.py
app/web/services/: __init__.py  monitor_service.py
app/web/static/: style.css
app/web/templates/: alerts.html  index.html  logs.html
docs/: architecture.md
registry-monitor/: README.md  main.py
registry-monitor/detection/: malware_patterns.py
registry-monitor/monitoring/: autorun_monitor.py  integrity_checker.py  monitor.py
registry-monitor/reports/: report_generator.py
registry-monitor/utils/: hashing.py  helpers.py  logger.py
scripts/: run_monitor.bat
src/: __init__.py  monitor.py
tests/: __init__.py  test_monitor.py
