[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-registry-monitor"
version = "0.1.0"
description = "Windows Registry Change Monitoring System for detecting unauthorized registry modifications"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
authors = [
    {name = "Registry Monitor Team", email = "registry-monitor@example.com"},
]
maintainers = [
    {name = "Registry Monitor Team", email = "registry-monitor@example.com"},
]
keywords = ["windows", "registry", "monitoring", "security", "malware-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pywin32>=305; platform_system == 'Windows'",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "flake8>=4.0",
    "black>=22.0",
    "pylint>=2.12",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/Windows-Registry-Change-Monitoring-System"
Documentation = "https://github.com/yourusername/Windows-Registry-Change-Monitoring-System#readme"
Repository = "https://github.com/yourusername/Windows-Registry-Change-Monitoring-System.git"
Issues = "https://github.com/yourusername/Windows-Registry-Change-Monitoring-System/issues"
Changelog = "https://github.com/yourusername/Windows-Registry-Change-Monitoring-System/blob/main/CHANGELOG.md"

[project.scripts]
registry-monitor = "app.main:run"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=app --cov-report=html --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "winreg",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]